--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3518,7 +3518,7 @@ month ={Nov.},
 }
 
 @article{Lee:TACO'16,
-  	title={Simultaneous multi-layer access: Improving 3D-stacked memory bandwidth at low cost},
+  	title={Simultaneous multi-layer access: Improving {3D}-stacked memory bandwidth at low cost},
  	author={Lee, Donghyuk and Ghose, Saugata and Pekhimenko, Gennady and Khan, Samira and Mutlu, Onur},
  	journal={ACM Transactions on Architecture and Code Optimization (TACO)},
   	volume={12},
@@ -3529,7 +3529,7 @@ month ={Nov.},
 }
 
 @article{Liu:DTC'05,
- 	title={Bridging the processor-memory performance gap with 3D IC technology},
+ 	title={Bridging the processor-memory performance gap with {3D IC} technology},
  	author={Liu, Christianto C and Ganusov, Ilya and Burtscher, Martin and Tiwari, Sandip},
   	journal={IEEE Design \& Test of Computers},
   	volume={22},
@@ -3540,7 +3540,7 @@ month ={Nov.},
 }
 
 @inproceedings{Cheng:Tencon'13,
-  	title={Thermal-aware task allocation, memory mapping, and task scheduling for 3D stacked memory and processor architecture},
+  	title={Thermal-aware task allocation, memory mapping, and task scheduling for {3D} stacked memory and processor architecture},
   	author={Cheng, Wei-Kai and Hsu, Ting-Wei},
   	booktitle={IEEE 2013 Tencon-Spring},
   	pages={95--98},
@@ -3549,7 +3549,7 @@ month ={Nov.},
 }
 
 @article{Lee:TVLSI'15,
-  	title={Runtime thermal management for 3-d chip-multiprocessors with hybrid SRAM/MRAM l2 cache},
+  	title={Runtime thermal management for {3-D} chip-multiprocessors with hybrid {SRAM/MRAM L2} cache},
   	author={Lee, Seunghan and Kang, Kyungsu and Kyung, Chong-Min},
   	journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
   	volume={23},
@@ -3560,7 +3560,7 @@ month ={Nov.},
 }
 
 @article{Lee:TVLSI'16,
-  	title={Hybrid L2 NUCA Design and Management Considering Data Access Latency, Energy Efficiency, and Storage Lifetime},
+  	title={Hybrid {L2 NUCA} Design and Management Considering Data Access Latency, Energy Efficiency, and Storage Lifetime},
   	author={Lee, Seunghan and Kang, Kyungsu and Jung, Jongpil and Kyung, Chong-Min},
   	journal={IEEE Transactions on Very Large Scale Integration (VLSI) Systems},
   	volume={24},
@@ -3571,7 +3571,7 @@ month ={Nov.},
 }
 
 @inproceedings{Healy:CICC'10,
-  	title={Design and analysis of 3D-MAPS: A many-core 3D processor with stacked memory},
+  	title={Design and analysis of {3D-MAPS}: A many-core {3D} processor with stacked memory},
   	author={Healy, Michael B and Athikulwongse, Krit and Goel, Rohan and Hossain, Mohammad M and Kim, Dae Hyun and Lee, Young-Joon and Lewis, Dean L and Lin, Tzu-Wei and Liu, Chang and Jung, Moongon and others},
   	booktitle={IEEE Custom Integrated Circuits Conference 2010},
   	pages={1--4},
@@ -3580,7 +3580,7 @@ month ={Nov.},
 }
 
 @article{Zhang:JETC'15,
-  	title={Dynamic cache pooling in 3D multicore processors},
+  	title={Dynamic cache pooling in {3D} multicore processors},
   	author={Zhang, Tiansheng and Meng, Jie and Coskun, Ayse K},
   	journal={ACM Journal on Emerging Technologies in Computing Systems (JETC)},
   	volume={12},
@@ -3591,7 +3591,7 @@ month ={Nov.},
 }
 
 @article{Asad:MM'17,
-  	title={Optimization-based power and thermal management for dark silicon aware 3D chip multiprocessors using heterogeneous cache hierarchy},
+  	title={Optimization-based power and thermal management for dark silicon aware {3D} chip multiprocessors using heterogeneous cache hierarchy},
   	author={Asad, Arghavan and Ozturk, Ozcan and Fathy, Mahmood and Jahed-Motlagh, Mohammad Reza},
   	journal={Microprocessors and Microsystems},
   	volume={51},
