--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -63,15 +63,15 @@
  OPTpages = {417--422}
 }
 
-@ARTICLE{WangTang:TOC'18,
+@ARTICLE{WangTang:TOC'19,
 	author = {Hai Wang and Diya Tang and Ming Zhang and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan},
 	journal = toc,
 	title = {{GDP}: A Greedy Based Dynamic Power Budgeting Method for Multi/Many-Core Systems in Dark Silicon},
-	year = {2018},
-        OPTmonth = {May},
-        OPTvolume = {67},
-        OPTnumber = {5},
-        OPTpages = {617--630},
+	year = {2019},
+        month = {April},
+        volume = {68},
+        number = {4},
+        pages = {526--541},
 }
 
 @ARTICLE{WangHuang:TCAD'18,
