--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3606,3 +3606,45 @@ month ={Nov.},
      month = September,
      year = {2011},
 }
+
+@inproceedings{Ruano:WISP'15,
+  title={Improving a neural networks based {HVAC} predictive control approach},
+  author={A. E. Ruano and S. Silva and Shabnam Pesteh and P. M. Ferreira and H. Duarte and G. Mestre and H. Khosravani and R. Horta},
+  booktitle={IEEE International Symposium on Intelligent Signal Processing},
+  year={2015},
+}
+
+@article{Afram:EB'17,
+  title={Artificial neural network ({ANN}) based model predictive control ({MPC}) and optimization of {HVAC} systems: A state of the art review and case study of a residential {HVAC} system},
+  author={Abdul Afram and Farrokh Janabi-Sharifi and Alan S. Fung and Kaamran Raahemifar},
+  journal={Energy and buildings},
+  volume={141},
+  pages={96-113},
+  year={2017},
+}
+
+@inproceedings{Chen:ACSSC'17,
+  title={Modeling and optimization of complex building energy systems with deep neural networks},
+  author={Yize Chen and Yuanyuan Shi and Baosen Zhang},
+  booktitle={Asilomar Conference on Signals, Systems, and Computers},
+  pages={1368-1373},
+  year={2017},
+}
+
+@article{Hannan:IA'18,
+  title={A Review of Internet of Energy Based Building Energy Management Systems: Issues and Recommendations},
+  author={Mahammad A. Hannan and Mohammad Faisal and Pin Jern Ker and Looe Hui Mun and Khadija Parvin and Teuku Meurah Indra Mahlia and Frede Blaabjerg},
+  journal={IEEE Access},
+  volume={6},
+  pages={38997-39014 },
+  year={2018},
+}
+
+@article{Meng:IA'18,
+  title={Going Beyond the Mean: Distributional Degree-Day Base Temperatures for Building Energy Analytics Using Change Point Quantile Regression},
+  author={Qinglong Meng and Monjur Mourshed and Shen Wei},
+  journal={IEEE Access},
+  volume={6},
+  pages={39532-39540},
+  year={2018},
+}
