--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -2470,7 +2470,7 @@ Year={2016}
 }
 
 @article{Wang:access'17,
-  title={A dvfs based energy-efficient tasks scheduling in a data center},
+  title={A {DVFS} based energy-efficient tasks scheduling in a data center},
   author={Songyun Wang and Zhuzhong Qian and Jiabin Yuan and Ilsun You},
   journal={IEEE Access},
   volume={5},
@@ -3630,7 +3630,7 @@ month ={Nov.},
   author={Mahammad A. Hannan and Mohammad Faisal and Pin Jern Ker and Looe Hui Mun and Khadija Parvin and Teuku Meurah Indra Mahlia and Frede Blaabjerg},
   journal={IEEE Access},
   volume={6},
-  pages={38997--39014 },
+  pages={38997--39014},
   year={2018},
 }
 
