--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3642,3 +3642,15 @@ month ={Nov.},
   pages={39532--39540},
   year={2018},
 }
+
+@article{Kolokotsa:EB'16,
+  author={Dionysia Kolokotsa},
+  title={The role of smart grids in the building sector},
+  journal={Energy and buildings},
+  year={2016},
+  month = {March},
+  volume={116},
+  number={},
+  pages={703--708},  
+  publisher={Elsevier},
+}
