--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3654,3 +3654,13 @@ month ={Nov.},
   pages={703--708},  
   publisher={Elsevier},
 }
+
+@inproceedings{Yao:ISQED'2014,
+  title={Efficient region-aware {P/G TSV} planning for {3D ICs}},
+  author={Song Yao and Xiaoming Chen and Yu Wang and Yuchun Ma and Yuan Xie and Huazhong Yang},
+  booktitle={isqed},
+  pages={171--178},
+  year={2014},
+  month={March},
+  location={Santa Clara, CA},
+}
