--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -696,6 +696,7 @@ month ={June},
   journal = tvlsi,
   year={2015},
   volume = {23},
+  number = {7},
   pages = {1308--1321},
   month =  {July}
 }
