--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3169,7 +3169,7 @@ year={2012}
   author={Xi Liu and Qiao Chen and Venkatesh Sundaram and Rao R. Tummala and Suresh K. Sitaraman},
   journal={Microelectronics Reliability},
   volume={53},
-  number={},
+  number={1},
   pages={70--78},
   year={2013},
   publisher={Elsevier}
