--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -13,7 +13,7 @@
 @string{icvlsi = "International Conference on VLSI Design"}
 @string{isca = "Proc. Int. Symp. on Computer Architecture (ISCA)"}
 @string{tcad = "IEEE Trans. on Computer-Aided Design of Integrated Circuits and Systems"}
-@string{todaes = "ACM Trans. on Design Automation of Electronics Systems"}
+@string{todaes = "ACM Trans. on Design Automation of Electronic Systems"}
 @string{jssc = "IEEE J. Solid-State Circuits"}
 @string{tvlsi = "IEEE Trans. on Very Large Scale Integration (VLSI) Systems"}
 @string{tcs = "IEEE Trans. on Circuits and Systems"}
