--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3262,7 +3262,7 @@ Publisher={Wiley},
 
 @article{Bartolini:DE'18,
   title={Self-Aware Thermal Management for High Performance Computing Processors},
-  author={Andrea Bartolini and Roberto Bartolini and Daniele Cesarini and Francesco Beneventi},
+  author={Andrea Bartolini and Roberto Diversi and Daniele Cesarini and Francesco Beneventi},
   journal={IEEE Design \& Test},
   volume={35},
   number={5},
