--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3665,3 +3665,14 @@ month ={Nov.},
   month={March},
   location={Santa Clara, CA},
 }
+
+@article{Moore:TAC'81,
+  author={Bruce C. Moore},
+  title={Principal component analysis in linear systems: Controllability, observability, and model reduction},
+  journal={IEEE Trans. on Automatic Control},
+  year={1981},
+  month = {February},
+  volume={26},
+  number={1},
+  pages={17--32},  
+}
