--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3676,3 +3676,14 @@ month ={Nov.},
   number={1},
   pages={17--32},  
 }
+
+@article{Liu:TCAD'06,
+	title={Fast thermal simulation for runtime temperature tracking and management},
+	author={Pu Liu and Hang Li and Lingling Jin and Wei Wu and Sheldon X.-D. Tan and Jun Yang},
+	journal=tcad,
+	volume={25},
+	number={12},
+	pages={2882--2893},
+	year={2006},
+	month={December},
+}
