--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3687,3 +3687,15 @@ month ={Nov.},
 	year={2006},
 	month={December},
 }
+
+
+@article{Shin:TII'10,
+  title={Energy-Optimal Dynamic Thermal Management: Computation and Cooling Power Co-Optimization},
+  author={Donghwa Shin and Sung Woo Chung and Eui-Young Chung and Naehyuck Chang},
+  journal={IEEE Transactions on Industrial Informatics},
+  number={6},
+  volume={3}, 
+  pages={340--351},
+  month={August},
+  year={2010},
+}
