change online to misc for building reference

--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -895,17 +895,16 @@ OPTyear = {2009},
 url = {http://opencores.org}
 }
 
-@ONLINE{buildingenergydata:Online,
+@misc{buildingenergydata:Online,
 title = {Building Energy Data Book of {DOE}},
-OPTurl = {https://ieer.org/wp/wp-content/uploads/2012/03/DOE-2011-Buildings-Energy-DataBook-BEDB.pdf},
-url = {https://buildingsdatabook.eren.doe.gov},
+howpublished = {\url{https://buildingsdatabook.eren.doe.gov}},
 year = {2012},
 month = {March}
 }
 
-@ONLINE{trnsys:Online,
+@misc{trnsys:Online,
 title = {{TRNSYS  -- A transient systems simulation program}},
-url = {http://www.trnsys.com/}
+howpublished = {\url{http://www.trnsys.com/}},
 }
 
 @inproceedings{Massoumy:ICCPS'13,
