--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -43,6 +43,7 @@
 @string{icml="Proc. Int. Conf. on Machine Learning (ICML)"}
 @string{cvpr="Proc. IEEE/CVF Conf. on Computer Vision and Pattern Recognition (CVPR)"}
 @string{tpds="IEEE Trans. on Parallel and Distributed Systems"}
+@string{tii="IEEE Trans. on Industrial Informatics"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -2806,7 +2807,7 @@ year={2012}
 @article{Chakraborty:TII'17,
   title={Intelligent Scheduling of Thermostatic Devices for Efficient Energy Management in Smart Grid},
   author={Nilotpal Chakraborty and Arijit Mondal and Samrat Mondal},
-  journal={IEEE Transactions on Industrial Informatics},
+  journal=tii,
   number={6},
   volume={13}, 
   pages={2899--2910},
@@ -2816,7 +2817,7 @@ year={2012}
 @article{Jindal:TII'18,
   title={A Heuristic-based Smart {HVAC} Energy Management Scheme for University Buildings},
   author={Anish Jindal and Neeraj Kumar and Joel J. P. C. Rodrigues},
-  journal={IEEE Transactions on Industrial Informatics},
+  journal=tii,
   year={2018},
 }
 
@@ -3692,7 +3693,7 @@ month ={Nov.},
 @article{Shin:TII'10,
   title={Energy-Optimal Dynamic Thermal Management: Computation and Cooling Power Co-Optimization},
   author={Donghwa Shin and Sung Woo Chung and Eui-Young Chung and Naehyuck Chang},
-  journal={IEEE Transactions on Industrial Informatics},
+  journal=tii,
   number={6},
   volume={3}, 
   pages={340--351},
