--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3699,3 +3699,25 @@ month ={Nov.},
   month={August},
   year={2010},
 }
+
+@article{Quan:TII'10,
+  title={Feasibility Analysis for Temperature-Constraint Hard Real-Time Periodic Tasks},
+  author={Gang Quan and Vivek Chaturvedi},
+  journal=tii,
+  number={6},
+  volume={3}, 
+  pages={329--339},
+  month={August},
+  year={2010},
+}
+
+@article{Zhao:TII'10,
+  title={On Maximizing Reliability of Real-Time Embedded Applications Under Hard Energy Constraint},
+  author={Baoxian Zhao and Hakan Aydin and Dakai Zhu},
+  journal=tii,
+  number={6},
+  volume={3}, 
+  pages={316--328},
+  month={August},
+  year={2010},
+}
