--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3108,7 +3108,7 @@ year={2012}
   location={San Francisco, CA},
 }
   
-@article{Khdr:ToC'17,
+@article{Khdr:TOC'17,
    title={Power Density-Aware Resource Management for Heterogeneous Tiled Multicores},
    author={ Heba Khdr and Santiago Pagani and \'{E}ricles Sousa and Vahid Lari and Anuj Pathania and Frank Hannig and Muhammad Shafique and J\"{u}rgen Teich and J\"{o}rg Henkel},
    journal=toc,
