--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3721,3 +3721,12 @@ month ={Nov.},
   month={August},
   year={2010},
 }
+
+@inproceedings{Sahin:ICCAD'15,
+  title={Just enough is more: Achieving sustainable performance in mobile devices under thermal limitations},
+  author={Sahin, Onur and Varghese, Paul Thomas and Coskun, Ayse K},
+  booktitle=iccad,
+  pages={839--846},
+  year={2015},
+  organization={IEEE Press}
+}
