--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3724,9 +3724,10 @@ month ={Nov.},
 
 @inproceedings{Sahin:ICCAD'15,
   title={Just enough is more: Achieving sustainable performance in mobile devices under thermal limitations},
-  author={Sahin, Onur and Varghese, Paul Thomas and Coskun, Ayse K},
+  author={Onur Sahin and Paul Thomas Varghese and Ayse K. Coskun},
   booktitle=iccad,
   pages={839--846},
   year={2015},
-  organization={IEEE Press}
+  location = {Austin, TX, USA},
+  month = {November},
 }
