--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3731,3 +3731,25 @@ month ={Nov.},
   location = {Austin, TX, USA},
   month = {November},
 }
+
+@article{Rowe:TII'10,
+  title={Rate-Harmonized Scheduling and Its Applicability to Energy Management},
+  author={Anthony Rowe and Karthik Lakshmanan and Haifeng Zhu and Ragunathan Rajkumar},
+  journal=tii,
+  number={3},
+  volume={6}, 
+  pages={265--275},
+  month={August},
+  year={2010},
+}
+
+@article{Wang:TII'10,
+  title={{PAUC}: Power-Aware Utilization Control in Distributed Real-Time Systems},
+  author={Xiaorui Wang and Xing Fu and Xue Liu and Zonghua Gu},
+  journal=tii,
+  number={3},
+  volume={6}, 
+  pages={302--315},
+  month={August},
+  year={2010},
+}
