--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -49,6 +49,19 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangGuo:TCAD'19,
+	author = {Hai Wang and Xingxing Guo and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan},
+	journal = tcad,
+	title = {Leakage-Aware Predictive Thermal Management for Multi-Core Systems Using Echo State Network},
+	year = {2019},
+        OPTmonth = {May},
+        OPTvolume = {67},
+        OPTnumber = {5},
+        OPTpages = {617--630},
+}
+
+
+
 @inproceedings{GuoWang:ASPDAC'19,
  author = {Xingxing Guo and Hai Wang and Chi Zhang and He Tang and Yuan Yuan},
  title = {Leakage-Aware Thermal Management for Multi-Core Systems Using Piecewise Linear Model Based Predictive Control},
@@ -3751,5 +3764,16 @@ month ={Nov.},
   volume={6}, 
   pages={302--315},
   month={August},
+  year={2010},
+}
+
+@article{Schranzhofer:TII'10,
+  title={Dynamic Power-Aware Mapping of Applications onto Heterogeneous {MPSoC} Platforms},
+  author={Andreas Schranzhofer and Jian-Jian Chen and Lothar Thiele},
+  journal=tii,
+  number={4},
+  volume={6}, 
+  pages={692--707},
+  month={November},
   year={2010},
 }
