--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -792,6 +792,17 @@ month ={June},
   location={San Jose, CA},
 }
 
+@article{Sridhar:TOC'14,
+  author={Arvind Sridhar and Alessandro Vincenzi and David Atienza and Thomas Brunschwiler},
+  title={{3D-ICE}: A Compact Thermal Model for Early-Stage Design of Liquid-Cooled {ICs}},
+  journal =  toc,
+  year={2014},
+  month =  {October},
+  volume = {63},
+  number = {10},
+  pages = {2576--2589},
+}
+
 @article{Patti:IEEEPROC'06,
   author={Robert S. Patti},
   title={Three-Dimensional Integrated Circuits and the Future of System-on-Chip Designs},
@@ -3776,4 +3787,12 @@ month ={Nov.},
   pages={692--707},
   month={November},
   year={2010},
+}
+
+@inproceedings{Loh:ISCA'08,
+ author = {Gabriel H. Loh},
+ title = {{3D}-stacked memory architectures for multi-core processors},
+ booktitle = isca,
+ year = {2008},
+ pages = {453--464},
 }
