--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3796,3 +3796,14 @@ month ={Nov.},
  year = {2008},
  pages = {453--464},
 }
+
+@article{Hardavellas:USENIX'12,
+  title={The Rise and Fall of Dark Silicon},
+  author={Nikos Hardavellas},
+  journal={USENIX},
+  number={2},
+  volume={37}, 
+  pages={7--17},
+  month={April},
+  year={2012},
+}
