--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3807,3 +3807,24 @@ month ={Nov.},
   month={April},
   year={2012},
 }
+
+@ARTICLE{Huang:TOC'16,
+	author = {Letian Huang and Junshi Wang and Masoumeh Ebrahimi and Masoud Daneshtalab and Xiaofan Zhang and Guangjun Li and Axel Jantsch},
+	journal = toc,
+	title = {Non-Blocking Testing for Network-on-Chip},
+	year = {2016},
+        month = {March},
+        volume = {65},
+        number = {3},
+        pages = {679--692},
+}
+
+@inproceedings{Huang:ASPDAC'18,
+ author = {Letian Huang and Shuyu Chen and Qiong Wu and Masoumeh Ebrahimi and Junshi Wang and Shuyan Jiang and Qiang Li},
+ title = {A Lifetime-aware Mapping Algorithm to Extend {MTTF} of Networks-on-Chip},
+ booktitle = aspdac,
+ year = {2018},
+ month = {January},
+ location = {Jeju, South Korea},
+ OPTpages = {417--422}
+}
