--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3828,3 +3828,11 @@ month ={Nov.},
  location = {Jeju, South Korea},
  OPTpages = {417--422}
 }
+
+@phdthesis{Christian:PARSEC'11
+  author = {Christian Bienia},
+  title = {Benchmarking Modern Multiprocessors},
+  school = {Princeton University},
+  year   = {2011},
+  month  = {January}
+}
