--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3829,7 +3829,7 @@ month ={Nov.},
  OPTpages = {417--422}
 }
 
-@phdthesis{Christian:PARSEC'11
+@phdthesis{Christian:PARSEC'11,
   author = {Christian Bienia},
   title = {Benchmarking Modern Multiprocessors},
   school = {Princeton University},
