--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3829,10 +3829,29 @@ month ={Nov.},
  OPTpages = {417--422}
 }
 
-@phdthesis{Christian:PARSEC'11,
+@phdthesis{Christian:THESIS'11,
   author = {Christian Bienia},
   title = {Benchmarking Modern Multiprocessors},
   school = {Princeton University},
   year   = {2011},
   month  = {January}
+}
+
+@article{Binkert:SIGARCH'11,
+ author = {Binkert, Nathan and Beckmann, Bradford and Black, Gabriel and Reinhardt, Steven K. and Saidi, Ali and Basu, Arkaprava and Hestness, Joel and Hower, Derek R. and Krishna, Tushar and Sardashti, Somayeh and Sen, Rathijit and Sewell, Korey and Shoaib, Muhammad and Vaish, Nilay and Hill, Mark D. and Wood, David A.},
+ title = {The Gem5 Simulator},
+ journal = {SIGARCH Comput. Archit. News},
+ volume = {39},
+ number = {2},
+ month = {August},
+ year = {2011},
+ pages = {1--7}
+} 
+
+@inproceedings{Sheng:micro'09,
+  author = {Li, Sheng and Ahn, Jung Ho and Strong, Richard D. and Brockman, Jay B. and Tullsen, Dean M. and Jouppi, Norman P.},
+  title = {McPAT: an integrated power, area, and timing modeling framework for multicore and manycore architectures.},
+  booktitle = {MICRO},
+  pages = {469-480},
+  year = {2009}
 }
