--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3829,7 +3829,7 @@ month ={Nov.},
  OPTpages = {417--422}
 }
 
-@phdthesis{Christian:THESIS'11,
+@phdthesis{Bienia:THESIS'11,
   author = {Christian Bienia},
   title = {Benchmarking Modern Multiprocessors},
   school = {Princeton University},
@@ -3848,10 +3848,10 @@ month ={Nov.},
  pages = {1--7}
 } 
 
-@inproceedings{Sheng:micro'09,
+@inproceedings{Li:MICRO'09,
   author = {Li, Sheng and Ahn, Jung Ho and Strong, Richard D. and Brockman, Jay B. and Tullsen, Dean M. and Jouppi, Norman P.},
-  title = {McPAT: an integrated power, area, and timing modeling framework for multicore and manycore architectures.},
-  booktitle = {MICRO},
-  pages = {469-480},
+  title = {{McPAT}: an integrated power, area, and timing modeling framework for multicore and manycore architectures},
+  booktitle = micro,
+  pages = {469--480},
   year = {2009}
 }
