--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3838,20 +3838,23 @@ month ={Nov.},
 }
 
 @article{Binkert:SIGARCH'11,
- author = {Binkert, Nathan and Beckmann, Bradford and Black, Gabriel and Reinhardt, Steven K. and Saidi, Ali and Basu, Arkaprava and Hestness, Joel and Hower, Derek R. and Krishna, Tushar and Sardashti, Somayeh and Sen, Rathijit and Sewell, Korey and Shoaib, Muhammad and Vaish, Nilay and Hill, Mark D. and Wood, David A.},
- title = {The Gem5 Simulator},
- journal = {SIGARCH Comput. Archit. News},
- volume = {39},
- number = {2},
- month = {August},
- year = {2011},
- pages = {1--7}
+  author = {Nathan Binkert and Bradford Beckmann and Gabriel Black and Steven K. Reinhardt and Ali Saidi and Arkaprava Basu and Joel Hestness and Derek R. Hower and Tushar Krishna and Somayeh Sardashti and Rathijit Sen and Korey Sewell and Muhammad Shoaib and Nilay Vaish and Mark D. Hill and  David A. Wood},
+  title = {The gem5 Simulator},
+  journal = {SIGARCH Comput. Archit. News},
+  volume = {39},
+  number = {2},
+  month = {August},
+  year = {2011},
+  pages = {1--7}
 } 
 
-@inproceedings{Li:MICRO'09,
-  author = {Li, Sheng and Ahn, Jung Ho and Strong, Richard D. and Brockman, Jay B. and Tullsen, Dean M. and Jouppi, Norman P.},
-  title = {{McPAT}: an integrated power, area, and timing modeling framework for multicore and manycore architectures},
-  booktitle = micro,
-  pages = {469--480},
-  year = {2009}
+@article{Li:TACO'13,
+  author = {Sheng Li and Jung Ho Ahn and Richard D. Strong and Jay B. Brockman and Dean M. Tullsen and Norman P. Jouppi},
+  title = {The {McPAT} Framework for Multicore and Manycore Architectures: Simultaneously Modeling Power, Area, and Timing},
+  journal = {ACM Trans. Archit. Code Optim.},
+  volume = {10},
+  number = {1},
+  month = {April},
+  pages = {5:1--5:29},
+  year = {2013}
 }
