--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3839,7 +3839,7 @@ month ={Nov.},
 
 @article{Binkert:SIGARCH'11,
   author = {Nathan Binkert and Bradford Beckmann and Gabriel Black and Steven K. Reinhardt and Ali Saidi and Arkaprava Basu and Joel Hestness and Derek R. Hower and Tushar Krishna and Somayeh Sardashti and Rathijit Sen and Korey Sewell and Muhammad Shoaib and Nilay Vaish and Mark D. Hill and  David A. Wood},
-  title = {The gem5 Simulator},
+  title = {The Gem5 Simulator},
   journal = {SIGARCH Comput. Archit. News},
   volume = {39},
   number = {2},
