--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -14,6 +14,7 @@
 @string{isca = "Proc. Int. Symp. on Computer Architecture (ISCA)"}
 @string{tcad = "IEEE Trans. on Computer-Aided Design of Integrated Circuits and Systems"}
 @string{todaes = "ACM Trans. on Design Automation of Electronic Systems"}
+@string{taco = "ACM Trans. on Architecture and Code Optimization"}
 @string{jssc = "IEEE J. Solid-State Circuits"}
 @string{tvlsi = "IEEE Trans. on Very Large Scale Integration (VLSI) Systems"}
 @string{tcs = "IEEE Trans. on Circuits and Systems"}
@@ -3062,7 +3063,7 @@ year={2012}
 
 @article{Long:TACO'08,
 	author = {Jieyi Long and Seda Ogrenci Memik and Gokhan Memik and Rajarshi Mukherjee},
-	journal = {ACM Transactions on Architecture and Code Optimization},
+	journal = taco,
 	title = {Thermal monitoring mechanisms for chip multiprocessors},
 	year = {2008},
         month = {August},
@@ -3536,7 +3537,7 @@ month ={Nov.},
 @article{Lee:TACO'16,
   	title={Simultaneous multi-layer access: Improving {3D}-stacked memory bandwidth at low cost},
  	author={Lee, Donghyuk and Ghose, Saugata and Pekhimenko, Gennady and Khan, Samira and Mutlu, Onur},
- 	journal={ACM Transactions on Architecture and Code Optimization (TACO)},
+ 	journal=taco,
   	volume={12},
   	number={4},
   	pages={63},
@@ -3839,7 +3840,7 @@ month ={Nov.},
 
 @article{Binkert:SIGARCH'11,
   author = {Nathan Binkert and Bradford Beckmann and Gabriel Black and Steven K. Reinhardt and Ali Saidi and Arkaprava Basu and Joel Hestness and Derek R. Hower and Tushar Krishna and Somayeh Sardashti and Rathijit Sen and Korey Sewell and Muhammad Shoaib and Nilay Vaish and Mark D. Hill and  David A. Wood},
-  title = {The Gem5 Simulator},
+  title = {The gem5 Simulator},
   journal = {SIGARCH Comput. Archit. News},
   volume = {39},
   number = {2},
@@ -3851,7 +3852,7 @@ month ={Nov.},
 @article{Li:TACO'13,
   author = {Sheng Li and Jung Ho Ahn and Richard D. Strong and Jay B. Brockman and Dean M. Tullsen and Norman P. Jouppi},
   title = {The {McPAT} Framework for Multicore and Manycore Architectures: Simultaneously Modeling Power, Area, and Timing},
-  journal = {ACM Trans. Archit. Code Optim.},
+  journal = taco,
   volume = {10},
   number = {1},
   month = {April},
