--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -50,6 +50,18 @@
 % publications from our lab
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@ARTICLE{WangXiao:TODAES'19,
+	author = {Hai Wang and Tao Xiao and Darong Huang and Lang Zhang and Chi Zhang and He Tang and Yuan Yuan},
+	journal = todaes,
+	title = {Runtime Stress Estimation for Three-dimensional {IC} Reliability Management Using Artificial Neural Network},
+	year = {2019},
+        month = {November},
+        volume = {24},
+        number = {6},
+        pages = {69:1--69:29},
+}
+
+
 @ARTICLE{WangGuo:TCAD'19,
 	author = {Hai Wang and Xingxing Guo and Sheldon X.-D. Tan and Chi Zhang and He Tang and Yuan Yuan},
 	journal = tcad,
@@ -88,11 +100,11 @@
 	author = {Hai Wang and Darong Huang and Rui Liu and Chi Zhang and He Tang and Yuan Yuan},
 	journal = tcad,
 	title = {{STREAM}: Stress and Thermal Aware Reliability Management for {3-D ICs}},
-	year = {2018},
-        OPTmonth = {May},
-        OPTvolume = {67},
-        OPTnumber = {5},
-        OPTpages = {617--630},
+	year = {2019},
+        month = {November},
+        volume = {38},
+        number = {11},
+        pages = {2058--2071},
 }
 
 @ARTICLE{WangWan:TOC'18,
