--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3871,3 +3871,14 @@ month ={Nov.},
   pages = {5:1--5:29},
   year = {2013}
 }
+
+@article{Li:TODAES'19,
+  author = {Tengtao Li and Sachin S Sapatnekar},
+  title = {Stress-Induced Performance Shifts in {3D DRAMs}},
+  journal = todaes,
+  volume = {24},
+  number = {5},
+  month = {june},
+  year = {2019},
+  pages = {51:1--51:21}
+}
