--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3878,7 +3878,73 @@ month ={Nov.},
   journal = todaes,
   volume = {24},
   number = {5},
-  month = {june},
+  month = {June},
   year = {2019},
   pages = {51:1--51:21}
 }
+
+@inproceedings{Das:GLSVLSI'04,
+  author = {Shamik Das and Anantha Chandrakasan and Rafael Reif},
+  title =  {Timing, Energy, and Thermal Performance of Three-dimensional Integrated Circuits},
+  booktitle = glsvlsi,
+  year = {2004},
+  numbers = {6},
+  pages = {338--343}
+ }
+
+ @article{Loh:MICRO'07,
+  title={Processor Design in {3D} Die-Stacking Technologies},
+  author={Gabriel H. Loh and Yuan Xie and Bryan Black},
+  journal=micro,
+  pages={31--48},
+  volumn = {27},
+  number = {3},
+  year={2007},
+  month = {May},
+}
+
+@article{Siddhu:CSIT'17,
+author={Lokesh Siddhu and Preeti Ranjan Panda},
+title={Thermal aware runtime management of {3D} memory architecture},
+journal={CSI Transactions on ICT},
+year={2017},
+month={June},
+volume={5},
+number={2},
+pages={129--134}
+}
+
+@inproceedings{Hameed:DATE'11,
+  title={Dynamic thermal management in {3D} multi-core architecture through run-time adaptation},
+  author={Fazal Hameed and Mohammad Abdullah Al Faruque and J\"{o}rg Henkel},
+  booktitle= date,
+  month = {March},
+  year={2011},
+}
+
+@inproceedings{Zhao:ISQED'13,
+ author = {Dali Zhao and Houman Homayoun and Alex V. Veidenbaum},
+ title = {Temperature Aware Thread Migration in {3D} Architecture with Stacked {DRAM}},
+ booktitle = isqed,
+ year = {2013},
+ month = {March},
+ location = {Santa Calra, CA},
+}
+
+@inproceedings{Aljeddani:ICIST'18,
+ author = {Sulaiman Aljeddani and Farah Mohammadi},
+ title = {A Novel Migration Technique to Balance Thermal Distribution for Future Heterogeneous {3D} Chip Multiprocessors},
+ booktitle = {2018 Eighth International Conference on Information Science and Technology (ICIST)},
+ year = {2018},
+ month = {June},
+ location = {Cordoba, Spain},
+}
+
+@inproceedings{Tsai:SAC'12,
+ author = {Ting-Hao Tsai and Ya-Shu Chen},
+ title = {Thermal-aware Real-time Task Scheduling for Three-dimensional Multicore Chip},
+ booktitle = {Proceedings of the 27th Annual ACM Symposium on Applied Computing},
+ year = {2012},
+ pages = {1618--1624},
+ number = {7}
+} 
