--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3948,3 +3948,13 @@ pages={129--134}
  pages = {1618--1624},
  number = {7}
 } 
+
+@article{Chakraborty:MM'17,
+ author = {Shounak Chakraborty and Hemangee K. Kapoor},
+ title = {Performance Linked Dynamic Cache Tuning: A static energy reduction approach in tiled {CMPs}},
+ journal = {Microprocessors and Microsystems},
+ volume = {52},
+ month = {July},
+ year = {2017},
+ pages = {221--235},
+} 
