--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3958,3 +3958,27 @@ pages={129--134}
  year = {2017},
  pages = {221--235},
 } 
+
+
+@article{Hanumaiah:TOC'12,
+  author={Vinay Hanumaiah and Sarma Vrudhula},
+  title={Temperature-Aware DVFS for Hard Real-Time Applications on Multicore Processors},
+  journal = toc,
+  year={2012},
+  volume = {61},
+  number = {10},
+  pages = {1484--14494},
+  month =  {October}
+}
+
+
+@article{Lee:TOC'10,
+  author={Jong Sung Lee and Kevin Skadron and Sung Woo Chung},
+  title={Predictive Temperature-Aware DVFS},
+  journal = toc,
+  year={2010},
+  volume = {59},
+  number = {1},
+  pages = {127--133},
+  month =  {January}
+}
