--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3962,7 +3962,7 @@ pages={129--134}
 
 @article{Hanumaiah:TOC'12,
   author={Vinay Hanumaiah and Sarma Vrudhula},
-  title={Temperature-Aware DVFS for Hard Real-Time Applications on Multicore Processors},
+  title={Temperature-Aware {DVFS} for Hard Real-Time Applications on Multicore Processors},
   journal = toc,
   year={2012},
   volume = {61},
@@ -3974,7 +3974,7 @@ pages={129--134}
 
 @article{Lee:TOC'10,
   author={Jong Sung Lee and Kevin Skadron and Sung Woo Chung},
-  title={Predictive Temperature-Aware DVFS},
+  title={Predictive Temperature-Aware {DVFS}},
   journal = toc,
   year={2010},
   volume = {59},
