--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -3982,3 +3982,23 @@ pages={129--134}
   pages = {127--133},
   month =  {January}
 }
+
+@inproceedings{Li:DAC'17,
+author = {Xianfeng Li and Guikang Chen and Wen Wen},
+title = {Energy-Efficient Execution for Repetitive App Usages on {big.LITTLE} Architectures},
+booktitle = dac,
+year = {2017},
+month = {June},
+location = {Austin, TX, USA},
+pages = {1--6}
+}
+
+@inproceedings{Ma:DATE'17,
+ author = {Yue Ma and Thidapat Chantem and Robert P. Dick and Shige Wang and X. Sharon Hu},
+ title = {An On-Line Framework for Improving Reliability of Real-Time Systems on “{Big-Little}” Type {MPSoCs}},
+ booktitle = date,
+ year = {2017},
+ month = {March},
+ location = {Lausanne, Switzerland},
+ pages = {446--451}
+}
